<?xml version="1.0" encoding="utf-8" ?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frgAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/nombre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/me" />

                <ImageView
                    android:layout_width="150px"
                    android:layout_height="150px"
                    android:layout_weight="30"
                    android:src="@drawable/me" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/direccion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/telefono" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/correo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/mail" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>